fixed flickering on mobile screens

--- a/app/components/Header/Nav/Nav.module.css
+++ b/app/components/Header/Nav/Nav.module.css
@@ -20,15 +20,6 @@
   text-decoration: none;
   font-size: 40px;
 }
-.footer {
-  display: flex;
-  flex-wrap: wrap;
-}
-.footer a{
-  width: 50%;
-  color: #000;
-  text-decoration: none;
-}
 
 @media (max-width: 768px){
   .nav {
